# ESAB

./: README.md
Aaron_twocolorcode/: ESAB_homography_transform.mat  LinearLocalDemosaic_BlackFly23S6C.m  Simple_Two_Color_Implementation.m  Temperature_RG_nofilter.xlsx
Complete_Pipeline/: README.md  pyproject.toml  requirements.txt
Complete_Pipeline/esab_complete_pipeline/: __init__.py  clip_utils.py  config.py  cwt_utils.py  dataset_builder.py  io_utils.py  main.py  supervised_models.py  supervised_targets.py  supervised_train.py  sync_utils.py  train_vae.py  utils.py  vae_model.py  visualize.py
Image/: README.md  clustering.py  config.json  config.py  imgBasics.py  img_save.py  width_extract.py
Image/PARAM/EVAL/: EVAL.py  VIS.py
Image/PARAM/IMG/: IMG.py
Image/PARAM/ML/: CNN.py  ML.py  RESNET.py  VIS.py
Image/PARAM/POR/: POR.py  __init__.py
Image/PARAM/PROCESSING/: CLIP.py  PROCESS.py  SCANLINE.py
Image/PARAM/TS/: TS.py
Image/utils/: deco.py  dimensionality.py  exceptions.py  util.py  visuals.py
Image/utils/ML/: augmentation.py  dataset.py  decipher.py  retrieve.py
Image/utils/process/: process_tools.py  savelog.py
